[gd_scene load_steps=11 format=3 uid="uid://bnoqv312svl4k"]

[ext_resource type="Script" uid="uid://beaps3n1ubghn" path="res://scripts/bag.gd" id="1_6bjnb"]
[ext_resource type="PackedScene" uid="uid://coaotjijpvoi2" path="res://scenes/bag_items.tscn" id="2_8dtae"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tuyoq"]
size = Vector2(1255.8484, 760.9063)

[sub_resource type="Animation" id="Animation_6blhx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(311.80466, 406.40982)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.2489982]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("warning:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.20392157, 0.09411765, 0.007843138, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Cover:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.34509805, 0.1764706, 0.023529412, 1)]
}

[sub_resource type="Animation" id="Animation_8dtae"]
resource_name = "close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(367, 174), Vector2(311.80466, 406.40982)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.2489982]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cover:color")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.34509805, 0.1764706, 0.023529412, 0), Color(0.34509805, 0.1764706, 0.023529412, 1)]
}

[sub_resource type="Animation" id="Animation_qlbld"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(311.80466, 406.40982), Vector2(367, 174)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.2489982, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cover:color")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.34509805, 0.1764706, 0.023529412, 1), Color(0.34509805, 0.1764706, 0.023529412, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_la0sw"]
_data = {
&"RESET": SubResource("Animation_6blhx"),
&"close": SubResource("Animation_8dtae"),
&"open": SubResource("Animation_qlbld")
}

[sub_resource type="Animation" id="Animation_6twof"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("warning:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_la0sw"]
resource_name = "full"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("warning:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0), Color(1, 0, 0, 1), Color(1, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ih7hy"]
_data = {
&"RESET": SubResource("Animation_6twof"),
&"full": SubResource("Animation_la0sw")
}

[node name="bag" type="ColorRect"]
z_index = -2
offset_left = 311.80466
offset_top = 406.40982
offset_right = 1606.8047
offset_bottom = 1209.4097
rotation = 1.2489982
mouse_filter = 2
color = Color(0.34414157, 0.17461061, 0.025434045, 1)
script = ExtResource("1_6bjnb")

[node name="Bag" type="Area2D" parent="."]
z_index = 11
collision_layer = 1024
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bag"]
position = Vector2(649.0758, 397.54688)
shape = SubResource("RectangleShape2D_tuyoq")

[node name="open" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_la0sw")
}

[node name="Bag O\' Holding" type="Node2D" parent="."]

[node name="warning" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.101227
offset_top = -16.76944
offset_right = 7.2696533
offset_bottom = 8.800903
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 0)

[node name="full" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ih7hy")
}

[node name="BagItems" parent="." instance=ExtResource("2_8dtae")]
visible = false
z_index = -1
z_as_relative = false
position = Vector2(162.49551, 728.5979)
scale = Vector2(5, 5)

[node name="Interior" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 14.32665
offset_top = 21.917816
offset_right = 1276.0
offset_bottom = 779.0
mouse_filter = 2
color = Color(0.2384842, 0.11481408, 0.011228062, 1)

[node name="Cover" type="ColorRect" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.34509805, 0.1764706, 0.023529412, 1)

[node name="Points of Movement" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Points of Movement"]
position = Vector2(130.08595, 102.739716)

[node name="Marker2D2" type="Marker2D" parent="Points of Movement"]
position = Vector2(1127, 129)

[node name="Marker2D3" type="Marker2D" parent="Points of Movement"]
position = Vector2(314.99997, 162)

[node name="Marker2D4" type="Marker2D" parent="Points of Movement"]
position = Vector2(580, 175)

[node name="Marker2D5" type="Marker2D" parent="Points of Movement"]
position = Vector2(172.00002, 359)

[node name="Marker2D6" type="Marker2D" parent="Points of Movement"]
position = Vector2(759, 463.99997)

[node name="Marker2D7" type="Marker2D" parent="Points of Movement"]
position = Vector2(1087, 696)

[node name="Marker2D8" type="Marker2D" parent="Points of Movement"]
position = Vector2(864, 240)

[node name="Marker2D9" type="Marker2D" parent="Points of Movement"]
position = Vector2(828, 629.00006)

[node name="Marker2D10" type="Marker2D" parent="Points of Movement"]
position = Vector2(1109, 447.00006)

[node name="Marker2D11" type="Marker2D" parent="Points of Movement"]
position = Vector2(572, 603)

[node name="Marker2D12" type="Marker2D" parent="Points of Movement"]
position = Vector2(770, 90)

[node name="Marker2D13" type="Marker2D" parent="Points of Movement"]
position = Vector2(951, 408)

[node name="Marker2D16" type="Marker2D" parent="Points of Movement"]
position = Vector2(362.00003, 653)

[node name="Marker2D18" type="Marker2D" parent="Points of Movement"]
position = Vector2(174.7851, 665.7534)

[node name="Marker2D19" type="Marker2D" parent="Points of Movement"]
position = Vector2(333.52435, 342.46576)

[node name="Marker2D22" type="Marker2D" parent="Points of Movement"]
position = Vector2(500.28653, 479.45206)

[connection signal="area_entered" from="Bag" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Bag" to="." method="_on_area_2d_area_exited"]
[connection signal="mouse_entered" from="Bag" to="." method="_on_bag_mouse_entered"]
[connection signal="mouse_exited" from="Bag" to="." method="_on_bag_mouse_exited"]
